--- a/sync-phases/plain-manifests/pre-sync-job.yaml
+++ b/sync-phases/plain-manifests/pre-sync-job.yaml
@@ -2,6 +2,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: before
+  argocd.argoproj.io/hook: PreSync
+  argocd.argoproj.io/hook delete policy: HookSucceeded
 spec:
   template:
     spec:
