--- a/sync-phases/plain-manifests/pre-sync-job.yaml
+++ b/sync-phases/plain-manifests/pre-sync-job.yaml
@@ -3,7 +3,7 @@ kind: Job
 metadata:
   name: before
   argocd.argoproj.io/hook: PreSync
-  argocd.argoproj.io/hook delete policy: HookSucceeded
+  argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
