--- a/sync-phases/plain-manifests/skip-job.yaml
+++ b/sync-phases/plain-manifests/skip-job.yaml
@@ -2,7 +2,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: skip
-  argocd.argoproj.io/hook: Skip
+  annotations:
+    argocd.argoproj.io/hook: Skip
 spec:
   template:
     spec:
