--- a/sync-phases/plain-manifests/sync-job.yaml
+++ b/sync-phases/plain-manifests/sync-job.yaml
@@ -2,7 +2,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: sync
-  argocd.argoproj.io/hook: Sync
+  annotations:
+    argocd.argoproj.io/hook: Sync
 spec:
   template:
     spec:
